[WIP] slimifying sidebar edit

--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -73,135 +73,10 @@
     </div>
   </div>
 
-  <!-- selected nodes or edges -->
-  <div *ngIf="graphService.selectedElements.nodes.length > 0 || graphService.selectedElements.edges.length > 0">
-
-    <hr>
-
-    <!-- Display selected nodes -->
-    <h5 *ngIf="graphService.selectedElements.nodes.length > 0">
-      <span class="float-left">
-        {{'SIDEBAR_EDIT_COMPARISON_NODES' | translate}}
-      </span>
-      <a aria-controls="contentNodesSelected"
-         aria-expanded="true"
-         class="float-right"
-         data-target="#contentNodesSelected"
-         data-toggle="collapse"
-         href="#"
-         ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-         placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-         container="body"
-         role="button"
-         type="button">
-        <fa-icon [icon]="faChevronDown"></fa-icon>
-      </a>
-    </h5>
-
-    <div *ngIf="graphService.selectedElements.nodes.length > 0" class="table-responsive">
-
-      <div class="show" id="contentNodesSelected">
-        <table class="table">
-
-          <thead>
-          <tr>
-            <td *ngFor="let node of graphService.selectedElements.nodes">
-              <a (click)="graphService.highlightByElementId(node.id)" data-toggle="tooltip"
-                 ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}"
-                 placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-                 role="button">
-                <b class="float-right">{{node.name}} ({{node.id}})</b>
-              </a>
-            </td>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td *ngFor="let node of graphService.selectedElements.nodes; let elementIndex = index">
-
-              <table class="table table-borderless">
-
-                <tr *ngFor="let attribute of node|attributesByElement">
-                  <td *ngIf="elementIndex === 0" colspan="2"><b>{{attribute}}</b></td>
-                  <td class="w-100">{{node[attribute]}}</td>
-                </tr>
-
-              </table>
-
-            </td>
-          </tr>
-          </tbody>
-
-        </table>
-      </div>
-
-    </div>
-
-    <hr *ngIf="graphService.selectedElements.edges.length > 0">
-
-    <!-- Display selected edges -->
-    <h5 *ngIf="graphService.selectedElements.edges.length > 0" class="mt-2">
-      <span class="float-left">
-        {{'SIDEBAR_EDIT_COMPARISON_EDGES' | translate}}
-      </span>
-      <a aria-controls="contentEdgesSelected"
-         aria-expanded="true"
-         class="float-right"
-         data-target="#contentEdgesSelected"
-         data-toggle="collapse"
-         href="#"
-         ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-         placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-         container="body"
-         role="button"
-         type="button">
-        <fa-icon [icon]="faChevronDown"></fa-icon>
-      </a>
-    </h5>
-
-    <div *ngIf="graphService.selectedElements.edges.length > 0" class="table-responsive">
-
-      <div class="show" id="contentEdgesSelected">
-        <table class=" table">
-
-          <thead>
-          <tr>
-            <td *ngFor="let edge of graphService.selectedElements.edges">
-              <a (click)="graphService.highlightByElementId(edge.id)" data-toggle="tooltip"
-                 ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{edge.id}}"
-                 placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-                 role="button">
-                <b class="float-right">{{edge.name}} ({{edge.id}})</b>
-              </a>
-            </td>
-          </tr>
-          </thead>
-
-          <tbody>
-          <tr>
-            <td *ngFor="let edge of graphService.selectedElements.edges; let elementIndex = index">
-
-              <table class="table table-borderless">
-
-                <tr *ngFor="let attribute of edge|attributesByElement">
-                  <td *ngIf="elementIndex === 0" colspan="2"><b>{{attribute}}</b></td>
-                  <td class="w-100">{{edge[attribute]}}</td>
-                </tr>
-
-              </table>
-
-            </td>
-          </tr>
-          </tbody>
-
-        </table>
-      </div>
-    </div>
-
-    <hr *ngIf="graphService.selectedElements.edges.length > 0">
-
-  </div>
+  <app-sidebar-edit-selected
+    *ngIf="graphService.selectedElements.nodes.length > 0
+    || graphService.selectedElements.edges.length > 0">
+  </app-sidebar-edit-selected>
 
   <!-- NAV -->
   <div aria-orientation="horizontal" class="nav nav-pills flex-row" id="editsNav" role="tablist">
@@ -501,183 +376,15 @@
 
     </div>
 
-    <!-- Edit: Inspect -->
-    <div aria-labelledby="editsNavInspect" class="tab-pane fade" id="editsNavInspectContent" role="tabpanel">
-      <p>{{'SIDEBAR_EDIT_INSPECT_TITLE_HINT' | translate}}</p>
+    <!-- Edit: Inspection tool -->
+    <app-sidebar-edit-inspect
+      aria-labelledby="editsNavInspect"
+      class="tab-pane fade"
+      id="editsNavInspectContent"
+      role="tabpanel">
+    </app-sidebar-edit-inspect>
 
-      <!-- INSPECTION LIST -->
-      <div class="table-responsive">
-        <table class="table">
-
-          <ng-container *ngFor="let def of highlightListDefinition; let defIndex = index">
-
-            <tr [ngClass]="def.markedForDeletion ? 'table-danger' : ''">
-              <td>{{def.type | translate}}</td>
-              <td>{{def.property.name}}</td>
-
-              <td *ngIf="utilityService.utilIsNumber(def.rangeLower) && utilityService.utilIsNumber(def.rangeUpper)">
-                {{'SIDEBAR_EDIT_INSPECT_RANGE_LOWER' | translate}} <b>{{def.rangeLower}}</b>
-                {{'SIDEBAR_EDIT_INSPECT_RANGE_UPPER' | translate}} <b>{{def.rangeUpper}}</b>
-              </td>
-
-              <td *ngIf="def.sameAs">{{'SIDEBAR_EDIT_INSPECT_SAME' | translate}} <b>{{def.sameAs}}</b></td>
-
-              <td>
-
-                <button (click)="graphService.highlightByElementSameAs(def.type, def.property, def.sameAs)"
-                        *ngIf="def.sameAs"
-                        class="btn btn-outline-primary">
-                  <fa-icon [icon]="faMagic"></fa-icon>
-                </button>
-
-                <button
-                  (click)="graphService.highlightByElementRange(def.type, def.property, def.rangeLower, def.rangeUpper)"
-                  *ngIf="utilityService.utilIsNumber(def.rangeLower) && utilityService.utilIsNumber(def.rangeUpper)"
-                  class="btn btn-outline-primary">
-                  <fa-icon [icon]="faMagic"></fa-icon>
-                </button>
-              </td>
-
-              <td>
-
-                <button (click)="markForDeletion(defIndex)" *ngIf="!def.markedForDeletion"
-                        class="btn btn-outline-danger">
-                  <fa-icon [icon]="faTrash"></fa-icon>
-                </button>
-
-                <button (click)="def.markedForDeletion = false" *ngIf="def.markedForDeletion"
-                        class="btn btn-outline-danger">
-                  <fa-icon [icon]="faTimes"></fa-icon>
-                </button>
-
-              </td>
-            </tr>
-            <tr *ngIf="def.markedForDeletion">
-              <td colspan="4">
-                {{'SIDEBAR_EDIT_INSPECT_REMOVE_ITEM' | translate}}
-              </td>
-              <td>
-                <button (click)="deleteFromHighlightList(defIndex)" class="btn btn-outline-danger">
-                  <fa-icon [icon]="faTrash"></fa-icon>
-                </button>
-              </td>
-            </tr>
-
-          </ng-container>
-        </table>
-
-      </div>
-
-      <hr *ngIf="highlightListDefinition.length > 0">
-
-      <!-- INSPECTION SPECIFICATION -->
-      <div class="table-responsive">
-        <table class="table table-borderless">
-          <tr>
-            <!-- TYPE -->
-            <td>
-              <div class="btn-group-vertical btn-group-toggle"
-                   data-toggle="buttons">
-
-                <label class="btn btn-outline-secondary">
-                  <input (click)="selectType('node')" [checked]="highlightDefinition.type === 'node'" autocomplete="off"
-                         id="typeNode"
-                         name="type"
-                         type="radio">
-                  {{'SIDEBAR_EDIT_INSPECT_TYPE_NODE' | translate}}
-                </label>
-
-                <label class="btn btn-outline-secondary">
-                  <input (click)="selectType('edge')" [checked]="highlightDefinition.type === 'edge'" autocomplete="off"
-                         id="typeEdge"
-                         name="type"
-                         type="radio">
-                  {{'SIDEBAR_EDIT_INSPECT_TYPE_EDGE' | translate}}
-                </label>
-
-              </div>
-            </td>
-
-            <!-- PROPERTY -->
-            <td>
-              <!-- NODES -->
-              <div *ngIf="highlightDefinition.type === 'node'"
-                   class="btn-group-vertical btn-group-toggle"
-                   data-toggle="buttons">
-
-                <label *ngFor="let property of getAvailablePropertiesByType('node')" class="btn btn-outline-secondary">
-                  <input (click)="selectProperty(property)" autocomplete="off" id="node_{{property.name}}"
-                         name="node_{{property.name}}"
-                         type="radio">
-                  {{property.name}}
-                </label>
-
-              </div>
-
-              <!-- EDGES -->
-              <div *ngIf="highlightDefinition.type === 'edge'"
-                   class="btn-group-vertical btn-group-toggle"
-                   data-toggle="buttons">
-
-                <label *ngFor="let property of getAvailablePropertiesByType('edge')" class="btn btn-outline-secondary">
-                  <input (click)="selectProperty(property)" autocomplete="off" id="edge_{{property.name}}"
-                         name="edge_{{property.name}}"
-                         type="radio">
-                  {{property.name}}
-                </label>
-
-              </div>
-            </td>
-
-            <!-- COMPARATOR -->
-            <td class="fixed-width">
-              <!-- numeric: lower -->
-              <form *ngIf="highlightDefinitionDatatype === 'numeric'">
-                <div class="form-group">
-                  <label for="numericLower">{{'SIDEBAR_EDIT_INSPECT_RANGE_LOWER' | translate}}</label>
-                  <input [(ngModel)]="highlightDefinition.rangeLower" class="form-control" id="numericLower"
-                         name="numericLower" placeholder="0"
-                         type="number">
-                </div>
-              </form>
-
-              <!-- numeric: upper -->
-              <form *ngIf="highlightDefinitionDatatype === 'numeric'">
-                <div class="form-group">
-                  <label for="numericUpper">{{'SIDEBAR_EDIT_INSPECT_RANGE_UPPER' | translate}}</label>
-                  <input [(ngModel)]="highlightDefinition.rangeUpper" class="form-control" id="numericUpper"
-                         name="numericUpper" placeholder="0"
-                         type="number">
-                </div>
-              </form>
-
-              <!-- text -->
-              <form *ngIf="highlightDefinitionDatatype === 'text'">
-                <div class="form-group">
-                  <label for="nonNumeric">{{'SIDEBAR_EDIT_INSPECT_SAME_LABEL' | translate}}</label>
-                  <input [(ngModel)]="highlightDefinition.sameAs" class="form-control" id="nonNumeric" name="nonNumeric"
-                         placeholder="{{'SIDEBAR_EDIT_INSPECT_SAME_PLACEHOLDER' | translate}}"
-                         type="text">
-                </div>
-              </form>
-            </td>
-
-            <!-- SUBMIT -->
-            <td>
-              <button (click)="addHighlightDefinitionToList()"
-                      [disabled]="!highlightDefinition.sameAs && (highlightDefinition.rangeUpper === null || highlightDefinition.rangeLower === null)"
-                      class="btn btn-outline-success">
-                <fa-icon [icon]="faCheck"></fa-icon>
-              </button>
-            </td>
-
-          </tr>
-        </table>
-      </div>
-
-    </div>
-
-    <!-- Edit: Highlight color -->
+    <!-- Edit: Setting highlight colors and duration -->
     <div aria-labelledby="editsNavHighlights" class="tab-pane fade" id="editsNavHighlightsContent"
          role="tabpanel">
 
