[WIP] sidebar edit selected elements is not yet working properly due to input attribute bindings

--- a/src/app/components/parts/sidebar-edit-selected/sidebar-edit-selected.component.html
+++ b/src/app/components/parts/sidebar-edit-selected/sidebar-edit-selected.component.html
@@ -1,17 +1,13 @@
 <!-- selected nodes or edges -->
-<div *ngIf="graphService.selectedElements.nodes.length > 0 || graphService.selectedElements.edges.length > 0">
+<div *ngIf="selectedElements.length > 0">
 
-  <hr>
-  <!-- NODES -->
-  <!-- nodes: headline -->
-  <h5 *ngIf="graphService.selectedElements.nodes.length > 0">
-      <span class="float-left">
-        {{'SIDEBAR_EDIT_COMPARISON_NODES' | translate}}
-      </span>
-    <a aria-controls="contentNodesSelected"
+  <!-- HEADLINE -->
+  <h5>
+    {{'SIDEBAR_EDIT_COMPARISON_' + type | translate}}
+    <a [attr.aria-controls]="type"
        aria-expanded="true"
        class="float-right"
-       data-target="#contentNodesSelected"
+       data-target="#{{type}}"
        data-toggle="collapse"
        href="#"
        ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
@@ -22,22 +18,23 @@
       <fa-icon [icon]="faChevronDown"></fa-icon>
     </a>
   </h5>
-  <!-- nodes: table -->
-  <div *ngIf="graphService.selectedElements.nodes.length > 0" class="table-responsive">
 
-    <div class="show" id="contentNodesSelected">
+  <!-- TABLE -->
+  <div class="show" id="{{type}}">
+    <div class="table-responsive">
+
       <table class="table">
 
         <thead>
         <tr>
-          <td *ngFor="let node of graphService.selectedElements.nodes">
-            <a (click)="graphService.highlightByElementId(node.id)"
+          <td *ngFor="let element of selectedElements">
+            <a (click)="graphService.highlightByElementId(element.id)"
                data-toggle="tooltip"
-               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{node.id}}"
+               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_' + type | translate}} {{element.id}}"
                placement="{{layoutService.layout.sidebar.tooltipDirection}}"
                role="button"
                class="float-right">
-              <b>{{node.name}} ({{node.id}})</b>
+              <b>{{element.name}} ({{element.id}})</b>
             </a>
           </td>
         </tr>
@@ -45,79 +42,13 @@
 
         <tbody>
         <tr>
-          <td *ngFor="let node of graphService.selectedElements.nodes; let elementIndex = index">
+          <td *ngFor="let element of selectedElements; let elementIndex = index">
 
             <table class="table table-borderless">
 
-              <tr *ngFor="let attribute of node|attributesByElement">
+              <tr *ngFor="let attribute of element|attributesByElement">
                 <td *ngIf="elementIndex === 0" colspan="3"><b>{{attribute}}</b></td>
-                <td class="w-100 text-right">{{node[attribute]}}</td>
-              </tr>
-
-            </table>
-
-          </td>
-        </tr>
-        </tbody>
-
-      </table>
-    </div>
-
-  </div>
-
-  <!-- SEPARATOR -->
-  <hr *ngIf="graphService.selectedElements.nodes.length > 0">
-
-  <!-- EDGES -->
-  <!-- edges: headline -->
-  <h5 *ngIf="graphService.selectedElements.edges.length > 0" class="mt-2">
-      <span class="float-left">
-        {{'SIDEBAR_EDIT_COMPARISON_EDGES' | translate}}
-      </span>
-    <a aria-controls="contentEdgesSelected"
-       aria-expanded="true"
-       class="float-right"
-       data-target="#contentEdgesSelected"
-       data-toggle="collapse"
-       href="#"
-       ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-       placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-       container="body"
-       role="button"
-       type="button">
-      <fa-icon [icon]="faChevronDown"></fa-icon>
-    </a>
-  </h5>
-  <!-- edges: table -->
-  <div *ngIf="graphService.selectedElements.edges.length > 0" class="table-responsive">
-
-    <div class="show" id="contentEdgesSelected">
-      <table class=" table">
-
-        <thead>
-        <tr>
-          <td *ngFor="let edge of graphService.selectedElements.edges">
-            <a (click)="graphService.highlightByElementId(edge.id)"
-               data-toggle="tooltip"
-               ngbTooltip="{{'SIDEBAR_EDIT_TT_HIGHLIGHT_NODE' | translate}} {{edge.id}}"
-               placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-               role="button"
-               class="float-right">
-              <b>{{edge.name}} ({{edge.id}})</b>
-            </a>
-          </td>
-        </tr>
-        </thead>
-
-        <tbody>
-        <tr>
-          <td *ngFor="let edge of graphService.selectedElements.edges; let elementIndex = index">
-
-            <table class="table table-borderless">
-
-              <tr *ngFor="let attribute of edge|attributesByElement">
-                <td *ngIf="elementIndex === 0" colspan="3"><b>{{attribute}}</b></td>
-                <td class="w-100 text-right">{{edge[attribute]}}</td>
+                <td class="w-100 text-right">{{element[attribute]}}</td>
               </tr>
 
             </table>
@@ -129,8 +60,6 @@
       </table>
     </div>
   </div>
-
-  <!-- SEPARATOR -->
-  <hr *ngIf="graphService.selectedElements.edges.length > 0">
 
 </div>
+
