handling boolean values as valid type for discrete, reworked selected elements and collapsing elements

--- a/src/app/components/main-mappings-new/main-mappings-new.component.html
+++ b/src/app/components/main-mappings-new/main-mappings-new.component.html
@@ -1,27 +1,13 @@
 <ng-container *ngIf="dataService.selectedNetwork && this.propertyToMap">
 
   <h1>
-    <span class="row">
-      <span class="col-11">
-        <a [routerLink]="['', { outlets: {primary: ['graph', dataService.selectedNetwork.id]} }]" data-toggle="tooltip"
-           ngbTooltip="{{'MAIN_MAPPINGS_GRAPH' | translate}}"
-           placement="{{layoutService.layout.main.tooltipDirection}}"
-           role="button">
-          <fa-icon [icon]="faArrowLeft"></fa-icon>
-        </a>
-        {{dataService.selectedNetwork.networkInformation.name}}
-      </span>
-      <span class="col-1 float-right">
-        <a [routerLink]="['', { outlets: {primary: ['info'], sidebar: ['manage']} }]"
-           class="mt-2 float-right btn btn-outline-primary"
-           data-toggle="tooltip"
-           ngbTooltip="{{'MAIN_GRAPH_TT_HOME' | translate}}"
-           placement="{{layoutService.layout.main.tooltipDirection}}"
-           role="button">
-          <fa-icon [icon]="faHome"></fa-icon>
-        </a>
-      </span>
-    </span>
+    <a [routerLink]="['', { outlets: {primary: ['graph', dataService.selectedNetwork.id]} }]" data-toggle="tooltip"
+       ngbTooltip="{{'MAIN_MAPPINGS_GRAPH' | translate}}"
+       placement="{{layoutService.layout.main.tooltipDirection}}"
+       role="button">
+      <fa-icon [icon]="faArrowLeft"></fa-icon>
+    </a>
+    {{dataService.selectedNetwork.networkInformation.name}}
 
   </h1>
 
@@ -48,7 +34,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
@@ -87,7 +74,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
@@ -103,7 +91,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{(!showHints ? 'MAIN_MAPPINGS_NEW_TT_HINTS_SHOW' : 'MAIN_MAPPINGS_NEW_TT_HINTS_HIDE') | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faQuestionCircle"></fa-icon>
       </button>
       <b>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING' | translate}}</b>
@@ -147,7 +136,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
@@ -186,7 +176,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
@@ -226,7 +217,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
@@ -237,13 +229,14 @@
                [chartObject]="chartObject" [numberOfBins]="binSize"
                [widthPercent]="100"></app-chart>
 
-    <!-- ALERT: minimum and maximum (if available) -->
+    <!-- ALERT: hints -->
     <div class="alert alert-info" role="alert">
       <button (click)="showHints = !showHints" class="btn btn-sm btn-outline-secondary mr-4"
               data-toggle="tooltip"
               ngbTooltip="{{(!showHints ? 'MAIN_MAPPINGS_NEW_TT_HINTS_SHOW' : 'MAIN_MAPPINGS_NEW_TT_HINTS_HIDE') | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faQuestionCircle"></fa-icon>
       </button>
       <b>{{'MAIN_MAPPINGS_NEW_DEFAULT_HINT_HEADING' | translate}}</b>
@@ -284,7 +277,8 @@
               data-toggle="tooltip"
               ngbTooltip="{{'MAIN_MAPPINGS_NEW_TT_DISTRIBUTION' | translate}}"
               placement="{{layoutService.layout.main.tooltipDirection}}"
-              type="button">
+              type="button"
+              container="body">
         <fa-icon [icon]="faChartBar"></fa-icon>
       </button>
       {{'MAIN_MAPPINGS_NEW_SELECTED_ATTRIBUTE' | translate}}: <b>{{propertyToMap.name}}</b>
