--- a/src/app/components/parts/chart/chart.component.html
+++ b/src/app/components/parts/chart/chart.component.html
@@ -1,6 +1,6 @@
 <!-- Sidebar: Preview continuous mappings (non-color) -->
 <div *ngIf="chartObject && chartObject.chartType.line">
-  <h5>
+  <h5 *ngIf="includeHeadline">
     <a [routerLink]="['', { outlets: {primary: ['mappings', index]} }]" role="button">
       <b>{{mapping.cleanStyleProperty || mapping.styleProperty}}</b>
       {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
