--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -1,48 +1,48 @@
 <div class="p-2">
 
-  <h5 *ngIf="dataService.selectedNetwork.networkInformation.description">
-    <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
-       class="mb-1 float-left"
-       data-toggle="tooltip"
-       ngbTooltip="{{'NAV_MANAGE' | translate}}"
-       placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-       role="button"
-       type="button">
-      <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
-    </a>
-    {{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}
+  <div class="row">
+    <div class="col">
 
-    <a aria-controls="contentDescription"
-       aria-expanded="true"
-       class="float-right"
-       data-target="#contentDescription"
-       data-toggle="collapse"
-       href="#"
-       ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-       placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-       container="body"
-       role="button"
-       type="button">
-      <fa-icon [icon]="faChevronDown"></fa-icon>
-    </a>
-  </h5>
+      <h5 *ngIf="dataService.selectedNetwork.networkInformation.description">
+        <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
+           class="mb-1 float-left"
+           data-toggle="tooltip"
+           ngbTooltip="{{'NAV_MANAGE' | translate}}"
+           placement="{{layoutService.layout.sidebar.tooltipDirection}}"
+           role="button"
+           type="button">
+          <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
+        </a>
+        {{'SIDEBAR_EDIT_DESCRIPTION_TITLE' | translate}}
+      </h5>
 
-  <h5 *ngIf="!dataService.selectedNetwork.networkInformation.description">
-    <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
-       class="mb-1"
-       data-toggle="tooltip"
-       ngbTooltip="{{'NAV_MANAGE' | translate}}"
-       placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-       role="button"
-       type="button">
-      <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
-    </a>
-    {{'SIDEBAR_EDIT_DEFAULT_TITLE' | translate}}
+      <h5 *ngIf="!dataService.selectedNetwork.networkInformation.description">
+        <a [routerLink]="['', { outlets: {sidebar: ['manage']} }]"
+           class="mb-1"
+           data-toggle="tooltip"
+           ngbTooltip="{{'NAV_MANAGE' | translate}}"
+           placement="{{layoutService.layout.sidebar.tooltipDirection}}"
+           role="button"
+           type="button">
+          <fa-icon [icon]="faArrowLeft" class="mr-1"></fa-icon>
+        </a>
+        {{'SIDEBAR_EDIT_DEFAULT_TITLE' | translate}}
 
-  </h5>
+      </h5>
+    </div>
+    <div class="col">
+      <span class="float-right"
+            (click)="collapseDescription.toggle()"
+            [attr.aria-expanded]="!isCollapsedDescription"
+            aria-controls="collapseExample">
+        <fa-icon [icon]="faChevronDown"></fa-icon>
+      </span>
+    </div>
+  </div>
+  <hr *ngIf="isCollapsedDescription">
 
   <!-- Network description -->
-  <div *ngIf="dataService.selectedNetwork.networkInformation.description" class="show" id="contentDescription">
+  <div #collapseDescription="ngbCollapse" [(ngbCollapse)]="isCollapsedDescription">
     <p [innerHTML]="dataService.selectedNetwork.networkInformation.description"></p>
   </div>
 
@@ -56,33 +56,20 @@
     </label>
   </div>
 
-  <!-- Show chart -->
-  <app-chart *ngIf="showChart" [chartObject]="lineChartObject"
-             [index]="index" [widthPercent]="100"></app-chart>
-
-  <!-- Show color gradient -->
-  <div *ngIf="showColorGradient">
-    <h5>
-      <a [routerLink]="['', {outlets: {primary: ['mappings', index]} }]" role="button">
-        <b>{{mapping.cleanStyleProperty || mapping.styleProperty}}</b>
-        {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-        <b>{{mapping.col}}</b>
-      </a>
-    </h5>
-    <div [style.background]="gradientBackground" [style.height.px]="200" [style.width.%]="100" class="mb-3">
-    </div>
-  </div>
-
   <!-- Selected elements -->
   <app-sidebar-edit-selected
     [selectedElements]="graphService.selectedElements.nodes"
+    [relevantProperties]="graphService.selectedElements.nodeProperties"
     [type]="'NODE'">
   </app-sidebar-edit-selected>
+
   <app-sidebar-edit-selected
     [selectedElements]="graphService.selectedElements.edges"
+    [relevantProperties]="graphService.selectedElements.edgeProperties"
     [type]="'EDGE'">
   </app-sidebar-edit-selected>
 
+  <hr>
 
   <!-- NAV -->
   <div aria-orientation="horizontal" class="nav nav-pills flex-row" id="editsNav" role="tablist">
@@ -128,6 +115,7 @@
     <div aria-labelledby="editsNavAspects" class="tab-pane fade show active" id="editsNavAspectsContent"
          role="tabpanel">
 
+      <!-- MAPPINGS: MANAGE -->
       <button [routerLink]="['', { outlets: {primary: ['mappings', -1]} }]"
               class="btn btn-lg btn-block btn-success mt-2 mb-2"
               data-toggle="tooltip"
@@ -142,26 +130,24 @@
       || dataService.selectedNetwork.mappings.nodesPassthrough.length > 0">
 
       <!-- MAPPINGS: NODES -->
-      <h5 *ngIf="dataService.selectedNetwork.mappings.nodesDiscrete.length > 0
-      || dataService.selectedNetwork.mappings.nodesContinuous.length > 0
-      || dataService.selectedNetwork.mappings.nodesPassthrough.length > 0">
-        {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
-        <a aria-controls="contentMappingsNodes"
-           aria-expanded="true"
-           class="float-right"
-           data-target="#contentMappingsNodes"
-           data-toggle="collapse"
-           href="#"
-           ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-           placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-           container="body"
-           role="button"
-           type="button">
-          <fa-icon [icon]="faChevronDown"></fa-icon>
-        </a>
-      </h5>
+      <div class="row" *ngIf="dataService.selectedNetwork.mappings.nodesDiscrete.length > 0
+              || dataService.selectedNetwork.mappings.nodesContinuous.length > 0
+              || dataService.selectedNetwork.mappings.nodesPassthrough.length > 0">
+        <div class="col">
+          <h5>
+            {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}</h5>
+        </div>
+        <div class="col">
+          <span class="float-right"
+                (click)="collapseMappingsNodes.toggle()"
+                [attr.aria-expanded]="!isCollapsedMappingsNodes"
+                aria-controls="collapseExample">
+            <fa-icon [icon]="faChevronDown"></fa-icon>
+          </span>
+        </div>
+      </div>
 
-      <div class="show mt-1" id="contentMappingsNodes">
+      <div #collapseMappingsNodes="ngbCollapse" [ngbCollapse]="isCollapsedMappingsNodes" class="mt-1">
         <!-- NP -->
         <table class="table"
                data-toggle="tooltip"
@@ -229,34 +215,36 @@
         </table>
 
         <!-- NC -->
-        <ul
-          *ngIf="dataService.selectedNetwork.mappings.nodesContinuous.length > 0"
-          class="list-group mb-2">
-      <span *ngFor="let nodeMap of dataService.selectedNetwork.mappings.nodesContinuous; let index = index">
-        <li *ngIf="!nodeMap.isColor" class="list-group-item">
-          <a (click)="displayMapping(nodeMap.chart, [], 'nc' + index)"
-             data-toggle="tooltip"
-             ngbTooltip="{{'SIDEBAR_EDIT_TT_CONTINUOUS' | translate}}"
-             placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-             role="button">
-            <b>{{nodeMap.cleanStyleProperty || nodeMap.styleProperty}}</b>
-            {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-            <b> {{nodeMap.col}}</b>
-          </a>
-        </li>
-        <li *ngIf="nodeMap.isColor" class="list-group-item">
-          <a (click)="displayMapping(null, nodeMap.colorGradient, 'nc' + index)"
-             data-toggle="tooltip"
-             ngbTooltip="{{'SIDEBAR_EDIT_TT_CONTINUOUS' | translate}}"
-             placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-             role="button">
-            <b>{{nodeMap.cleanStyleProperty || nodeMap.styleProperty}}</b>
-            {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-            <b> {{nodeMap.col}}</b>
-          </a>
-        </li>
-      </span>
-        </ul>
+        <div class="list-group list-group-flush"
+             *ngIf="dataService.selectedNetwork.mappings.nodesContinuous.length > 0">
+          <span *ngFor="let nc of dataService.selectedNetwork.mappings.nodesContinuous; let ncIndex = index">
+            <button class="list-group-item list-group-item-action" type="button"
+                    (click)="collapseVisualAid.toggle()"
+                    [attr.aria-expanded]="!isCollapsedVisualAid"
+                    aria-controls="collapseExample">
+              <b>{{nc.cleanStyleProperty}} </b>{{'SIDEBAR_EDIT_MAPPED_BY' | translate}}<b> {{nc.col}}</b>
+            </button>
+            <div #collapseVisualAid="ngbCollapse" [ngbCollapse]="isCollapsedVisualAid">
+              <app-chart *ngIf="hasChart(nc)" class="mt-2"
+                         [chartObject]="getLineChartObject(nc)"
+                         [index]="'nc' + ncIndex"
+                         [includeHeadline]="false"
+                         [widthPercent]="100"></app-chart>
+
+              <div *ngIf="hasGradient(nc)" class="mt-2"
+                   [style.background]="getGradient(nc)"
+                   [style.height.px]="200"
+                   [style.width.%]="100">
+              </div>
+              <a role="button" class="btn btn-block btn-sm btn-outline-secondary m-1"
+                 [routerLink]="['', { outlets: {primary: ['mappings', 'nc' + ncIndex]} }]">
+                {{'SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS' | translate}}
+                <fa-icon [icon]="faRoute"></fa-icon>
+              </a>
+            </div>
+          </span>
+        </div>
+
       </div>
 
       <hr *ngIf="dataService.selectedNetwork.mappings.edgesDiscrete.length > 0
@@ -264,26 +252,25 @@
       || dataService.selectedNetwork.mappings.edgesPassthrough.length > 0">
 
       <!-- MAPPINGS: EDGES -->
-      <h5 *ngIf="dataService.selectedNetwork.mappings.edgesDiscrete.length > 0
+      <div class="row" *ngIf="dataService.selectedNetwork.mappings.edgesDiscrete.length > 0
       || dataService.selectedNetwork.mappings.edgesContinuous.length > 0
       || dataService.selectedNetwork.mappings.edgesPassthrough.length > 0">
-        {{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}
-        <a aria-controls="contentMappingsEdges"
-           aria-expanded="true"
-           class="float-right"
-           data-target="#contentMappingsEdges"
-           data-toggle="collapse"
-           href="#"
-           ngbTooltip="{{'SIDEBAR_COLLAPSE' | translate}}"
-           placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-           container="body"
-           role="button"
-           type="button">
-          <fa-icon [icon]="faChevronDown"></fa-icon>
-        </a>
-      </h5>
+        <div class="col">
+          <h5>
+            {{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}
+          </h5>
+        </div>
+        <div class="col">
+          <span class="float-right"
+                (click)="collapseMappingsEdges.toggle()"
+                [attr.aria-expanded]="!isCollapsedMappingsEdges"
+                aria-controls="collapseExample">
+            <fa-icon [icon]="faChevronDown"></fa-icon>
+          </span>
+        </div>
+      </div>
 
-      <div class="show mt-1" id="contentMappingsEdges">
+      <div #collapseMappingsEdges="ngbCollapse" [ngbCollapse]="isCollapsedMappingsEdges" class="mt-1">
         <!-- EP -->
         <table class="table" data-toggle="tooltip"
                ngbTooltip="{{'SIDEBAR_EDIT_TT_PASSTHROUGH' | translate}}"
@@ -350,34 +337,37 @@
         </table>
 
         <!-- EC -->
-        <ul *ngIf="dataService.selectedNetwork.mappings.edgesContinuous.length > 0"
-            class="list-group mb-2">
-      <span *ngFor="let edgeMap of dataService.selectedNetwork.mappings.edgesContinuous; let index = index">
-        <li *ngIf="!edgeMap.isColor" class="list-group-item">
-          <a (click)="displayMapping(edgeMap.chart, [], 'ec' + index)"
-             data-toggle="tooltip"
-             ngbTooltip="{{'SIDEBAR_EDIT_TT_CONTINUOUS' | translate}}"
-             placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-             role="button">
-            <b>{{edgeMap.cleanStyleProperty || edgeMap.styleProperty}}</b>
-            {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-            <b>{{edgeMap.col}}</b>
-          </a>
-        </li>
-        <li *ngIf="edgeMap.isColor" class="list-group-item">
-          <a (click)="displayMapping(null, edgeMap.colorGradient, 'ec' + index)"
-             data-toggle="tooltip"
-             ngbTooltip="{{'SIDEBAR_EDIT_TT_CONTINUOUS' | translate}}"
-             placement="{{layoutService.layout.sidebar.tooltipDirection}}"
-             role="button">
-            <b>{{edgeMap.cleanStyleProperty || edgeMap.styleProperty}}</b>
-            {{'SIDEBAR_EDIT_MAPPED_BY' | translate}}
-            <b>{{edgeMap.col}}</b>
-          </a>
-        </li>
+        <div class="list-group list-group-flush"
+             *ngIf="dataService.selectedNetwork.mappings.edgesContinuous.length > 0">
+          <span *ngFor="let ec of dataService.selectedNetwork.mappings.edgesContinuous; let ecIndex = index">
+            <button class="list-group-item list-group-item-action" type="button"
+                    (click)="collapseVisualAid.toggle()"
+                    [attr.aria-expanded]="!isCollapsedVisualAid"
+                    aria-controls="collapseExample">
+              <b>{{ec.cleanStyleProperty}} </b>{{'SIDEBAR_EDIT_MAPPED_BY' | translate}}<b> {{ec.col}}</b>
+            </button>
+            <div #collapseVisualAid="ngbCollapse" [ngbCollapse]="isCollapsedVisualAid">
+              <app-chart *ngIf="hasChart(ec)" class="mt-2"
+                         [chartObject]="getLineChartObject(ec)"
+                         [index]="'ec' + ecIndex"
+                         [includeHeadline]="false"
+                         [widthPercent]="100"></app-chart>
 
-      </span>
-        </ul>
+              <div *ngIf="hasGradient(ec)" class="mt-2"
+                   [style.background]="getGradient(ec)"
+                   [style.height.px]="200"
+                   [style.width.%]="100">
+              </div>
+
+              <a role="button" class="btn btn-block btn-sm btn-outline-secondary m-1"
+                 [routerLink]="['', { outlets: {primary: ['mappings', 'ec' + ecIndex]} }]">
+                {{'SIDEBAR_EDIT_BTN_LABEL_DISPLAY_CONTINUOUS_DETAILS' | translate}}
+                <fa-icon [icon]="faRoute"></fa-icon>
+              </a>
+
+            </div>
+          </span>
+        </div>
       </div>
 
     </div>
