--- a/src/app/components/sidebar-edit/sidebar-edit.component.scss
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.scss
@@ -1,3 +1,16 @@
 .fixed-width {
   min-width: 120px;
 }
+
+.threshold-hover {
+  display: inline-flex;
+  // flex-direction: column;
+
+  .threshold {
+    // display: inline-block;
+    border-right: 1px solid red;
+    width: 1px;
+    height: 200px;
+  }
+}
+
